<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.canvasscreen.ui.CanvasActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ru.alexadler9.canvas.feature.view.canvas.CanvasView
        android:id="@+id/canvasView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorToolsPanelBackground"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorToolsPanelBorder" />

        <include
            android:id="@+id/layoutStyle"
            layout="@layout/layout_tools"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <include
            android:id="@+id/layoutPalette"
            layout="@layout/layout_tools"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <include
            android:id="@+id/layoutSize"
            layout="@layout/layout_tools"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <include
            android:id="@+id/layoutTool"
            layout="@layout/layout_tools"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>