<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemTools"
        android:icon="@drawable/ic_baseline_brush_24"
        android:title="@string/menu_tools"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuItemClear"
        android:icon="@drawable/ic_baseline_delete_outline_24"
        android:title="@string/menu_clear"
        app:showAsAction="ifRoom" />

</menu>