<?xml version="1.0" encoding="utf-8"?>
<ru.alexadler9.canvas.feature.view.tools.ToolsLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="0dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</ru.alexadler9.canvas.feature.view.tools.ToolsLayout>